package oefening2;

public class HelpStack {
}
