package oefening2;

public enum Type {
    HEARTS,
    DIAMONDS,
    SPADES,
    CLUBS,
}
